# moo

./: .ocamlformat  README.md  dune-project  moo.opam  pluto-charon.opam
docs/: ideas.md
lib/: ast.ml  ast.mli  dune  env.ml  env.mli  lexer.mll  parser.mly  parser_error.ml  reader.ml  reader.mli  runner.ml  runner.mli  typechecker.ml  typechecker.mli
lib/core/: ast_to_ir.ml  dune  ir.ml  pretty.ml  runner.ml  tycheck_to_ir.ml
lib/runner/: core.ml  dune
lib/syntax/: ast.ml  decomplexify.ml  dune  env.ml  env.mli  error.ml  incremental.ml  lexer.mll  loc.ml  loc_utils.ml  parser.messages  parser.mly  pretty.ml  surface.ml  surface_to_ast.ml  type.ml  utils.ml
lib/typechecker/: bidir.ml  bidir.mli  converter.ml  dune  pretty.ml  type.ml
lib/utils/: dune
src/lib/: dune  reader.ml  runner.ml
src/lib/core/: ir.ml  pretty.ml  runner.ml  tycheck_to_ir.ml
src/lib/module_/: dependency.ml  dune  resolver.ml  resolver.mli
src/lib/syntax/: ast.ml  dune  env.ml  env.mli  error.ml  incremental.ml  lexer.mll  loc.ml  parser.messages  parser.mly  pretty.ml  surface.ml  surface_to_ast.ml  token.ml  type.ml
src/lib/typechecker/: bidir.ml  bidir.mli  converter.ml  dune  ty_ast.ml
src/lib/utils/: fresh.ml  fresh.mli
stdlib/: fun.moo  moduletest.moo  sums.moo
test/: abstract_test.moo  arith.moo  arith_full.moo  cbn_ints.moo  contracts.moo  factorial.moo  focusing.moo  list.moo  loops.moo  n-products.moo  should_reject.moo  sum.moo  test_syntax.moo  toplevel.moo
